--- a/ShowMediaPlayer/packages.config
+++ b/ShowMediaPlayer/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net452" />
+  <package id="Sanford.Multimedia.Midi" version="6.6.0" targetFramework="net452" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.0-alpha3" targetFramework="net452" />
+  <package id="Vlc.DotNet.Core" version="3.0.0-develop275" targetFramework="net452" />
+  <package id="Vlc.DotNet.Core.Interops" version="3.0.0-develop275" targetFramework="net452" />
+  <package id="Vlc.DotNet.Forms" version="3.0.0-develop275" targetFramework="net452" />
 </packages>
